--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>capstone</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Mulish:ital@1&display=swap');
+    </style>
+    <title>Weather or Not</title>
   </head>
   <body>
     <div id="root"></div>
