--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Mulish:ital@1&display=swap');
     </style>
-    <title>Weather or Not</title>
+    <title>Weather or Not | Local & Saved Location Weather Updates</title>
+    <link rel="canonical" href="https://www.Weather-or-not.com"/>
   </head>
   <body>
     <div id="root"></div>
